--- a/Scoring_LR.ipynb
+++ b/Scoring_LR.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "1ffb722a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -36,20 +40,28 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "310f7f30",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "path=\"/local_disk/clytie/ibenamor/phd_experiments/scripts/LIA/stklia/exemples/voxceleb_seuil/model_dir/xvectors/voxceleb1_nosil/xvectors.txt\"\n",
+    "path=\"/xvectors/voxceleb1_nosil/xvectors.txt\"\n",
     "#Load parameters\n",
-    "typ_path=\"/local_disk/clytie/ibenamor/phd_experiments/data/train_param/typ_clean.txt\"\n",
-    "dout_path=\"/local_disk/clytie/ibenamor/phd_experiments/data/train_param/dout_clean.txt\""
+    "typ_path=\"data/typ_clean.txt\"\n",
+    "dout_path=\"data/dout_clean.txt\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "d5eb7b7a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -430,7 +442,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "ca4ce25f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "typ,dout=load_filter_soft(typ_path,dout_path)\n",
@@ -442,7 +458,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "87a00b4b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "utt={}\n",
@@ -454,7 +474,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "154aa1a0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -477,7 +501,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "1387f45d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "utt_llr_tar,llr_type_tar=partial_lr_analysis(tar, BA_test,utt,typ, dout, prob_dropin=0.12)\n",
@@ -490,7 +518,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "0dba2f2c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "BA_tar={}\n",
@@ -520,7 +552,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "daa0281d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "scores_BA={}\n",
@@ -543,7 +579,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "e9aeee10",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -570,7 +610,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "d594e210",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "scores_BA_df=pd.DataFrame()\n",
@@ -584,7 +628,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "c982397f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -714,7 +762,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "26c72d3d",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
